--- a/react-folder/src/App.css
+++ b/react-folder/src/App.css
@@ -1,5 +1,35 @@
 .App {
   text-align: center;
+  font-family: 'Indie Flower', cursive;
+}
+
+.childrens {
+  margin: auto;
+  width: 50%;
+}
+
+body {
+  background-image: url('pixel_weave.png');
+}
+
+.youandme {
+  font-size: 30px;
+  float: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 30px;
+  margin-top: 30px;
+  border-radius: 10px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  -webkit-transform: rotate(-20deg);
+  -moz-transform: rotate(-20deg);
+  -o-transform: rotate(-20deg);
+  -ms-transform: rotate(-20deg);
+  transform: rotate(-20deg);
 }
 
 .App-logo {
@@ -16,6 +46,20 @@
 
 .App-intro {
   font-size: large;
+}
+
+.nav {
+  padding-right: 20px;
+  font-size: 20px;
+}
+
+.navbar {
+  border-width: 2px;
+  border-style: dashed;
+  border-radius: 10px;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 0.5%;
 }
 
 @keyframes App-logo-spin {
