Timeline orders itself by time with posts and images

--- a/react-folder/src/App.css
+++ b/react-folder/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Indie Flower', cursive;
+  /*font-family: 'Indie Flower', cursive;*/
 }
 
 .childrens {
