--- a/react-folder/public/style/master.css
+++ b/react-folder/public/style/master.css
@@ -1,12 +1,20 @@
+/*
+COLOR SCHEME:
+dark blue: rgba(44, 62, 80,1.0)
+dark blue-grey: rgba(52, 73, 94,1.0)
+white: rgba(236, 240, 241,1.0)
+accent-red: rgba(192, 57, 43,1.0)
+
+*/
+
 body {
-  /*background-image: url("../media/welcome-3.jpg");*/
-  background: url("../media/welcome-3.jpg") no-repeat center center fixed;
+  /*background: url("../media/welcome-3.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-  /*background-repeat: no-repeat;
-  /*padding-bottom: 6em;*/
+  background-size: cover;*/
+  background-color:rgba(44, 62, 80,1.0);
+
 }
 
 .headline {
@@ -15,11 +23,30 @@ body {
 }
 
 .lightBox {
-  background-color: rgba(149, 172, 178, 0.67);
+  background-color: rgba(236, 240, 241,1.0);
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.blueBox {
+  background-color: rgba(52, 73, 94,1.0);
 }
 
 .postContent {
-  background-color: rgba(219, 247, 255, 0.87);
+  /*background-color: rgba(219, 247, 255, 0.87);*/
+  padding-left: .83em;
+  padding-right:.83em;
+  padding-top: .33em;
+}
+
+.nameLine {
+  padding-left: 1em;
+  border-top: .1em dashed rgba(192, 57, 43,1.0);
+}
+
+.deleteButton {
+  margin-top: 1em;
+  margin-right: 1em;
 }
 
 .spaceBottomXL {
@@ -30,8 +57,16 @@ body {
   padding-bottom: 2em;
 }
 
+.spaceBottomS {
+  padding-bottom: 1em;
+}
+
 .spaceTopM {
   padding-top: 2em;
+}
+
+.spaceTopS {
+  padding-top: 1em;
 }
 
 .spaceLeftM {
