--- a/react-folder/public/style/master.css
+++ b/react-folder/public/style/master.css
@@ -22,10 +22,15 @@ body {
   padding-bottom:.83em;
 }
 
+.uandi {
+  margin-top: -.2em;
+}
+
 .lightBox {
   background-color: rgba(236, 240, 241,1.0);
   margin-top: 1em;
   margin-bottom: 1em;
+  border-radius: 8px;
 }
 
 .blueBox {
